--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.password=root
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# SWAGGER
+springdoc.api-docs.path=/api
